--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="OPPAIを見つけよう" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/title/p.gif" />
+    <!-- OGP -->
+    <meta property="og:title" content="OPPAI" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://oppai.toffy.dev/" />
+    <meta property="og:image" content="%PUBLIC_URL%/ogp.jpg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
